demo-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-deployment
  labels:
    app: demo-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
      - name: demo-app
        image: 644435390668.dkr.ecr.eu-central-1.amazonaws.com/demo-app-baruch:latest
        ports:
        - containerPort: 5000
